[gd_scene load_steps=3 format=3 uid="uid://d1eqlqvotirg1"]

[ext_resource type="Script" path="res://addons/gdLinter/UI/Dock.gd" id="1_u5r3b"]
[ext_resource type="PackedScene" uid="uid://cgk7hjif0ujw1" path="res://addons/gdLinter/UI/GDLinterIgnoreWindow.tscn" id="3_ib5aw"]

[node name="Dock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5r3b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/Header"]
layout_mode = 2
bbcode_enabled = true
text = "[center]GDLint Plugin 2.0.2[/center]"
fit_content = true

[node name="LintedFile" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LintedFile"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/LintedFile/HBoxContainer"]
layout_mode = 2
text = "Currently linted file:"

[node name="File" type="Label" parent="VBoxContainer/LintedFile/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MiddleContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0

[node name="Tree" type="Tree" parent="VBoxContainer/MiddleContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
theme_override_colors/font_color = Color(0.77, 0.35, 0.35, 1)
theme_override_constants/v_separation = 0
columns = 2
column_titles_visible = true
hide_folding = true
hide_root = true
select_mode = 1
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MiddleContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/MiddleContainer/VBoxContainer"]
layout_mode = 2
text = "Ignore
Settings"

[node name="Statusbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="ProblemsContainer" type="HBoxContainer" parent="VBoxContainer/Statusbar"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ProblemsNum" type="Label" parent="VBoxContainer/Statusbar/ProblemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="ProblemsLbl" type="Label" parent="VBoxContainer/Statusbar/ProblemsContainer"]
layout_mode = 2
text = "problems found"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/Statusbar/ProblemsContainer"]
layout_mode = 2

[node name="IgnoredProblemsNum" type="Label" parent="VBoxContainer/Statusbar/ProblemsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="IgnoredProblemsLbl" type="Label" parent="VBoxContainer/Statusbar/ProblemsContainer"]
layout_mode = 2
text = "problems ignored"

[node name="Version" type="Label" parent="VBoxContainer/Statusbar"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 2

[node name="GdLinterIgnoreWindow" parent="." instance=ExtResource("3_ib5aw")]
dialog_text = ""

[connection signal="pressed" from="VBoxContainer/MiddleContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
